[package]
name = "biv-cli"
version = "0.1.0"
edition = "2024"

[lib]
name = "biv"

[dependencies]
anyhow = "1.0.100"
futures = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
serde_with = { version = "3.16.1", features = ["base64"] }
# testcontainers = "0.26.3"
testcontainers = {path = "../testcontainers-rs/testcontainers"}
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
